Day7/main.tf
variable "cidr" {
  description = "value of CIDR block"
  default     = "10.0.0.0/16"
}

resource "aws_key_pair" "dj" {
  key_name   = "dj-key"
  public_key = file("~/.ssh/id_rsa.pub")
}

resource "aws_vpc" "main" {
  cidr_block           = var.cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "main-vpc"
  }
}

resource "aws_subnet" "subnet" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "eu-north-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-igw"
  }
}

resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-rt"
  }
}

resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.subnet.id
  route_table_id = aws_route_table.rt.id
}

resource "aws_security_group" "sg" {
  name   = "web"
  vpc_id = aws_vpc.main.id

  ingress {
    description = "HTTP from vpc"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "web-sg"
  }
}

resource "aws_instance" "ec2" {
  ami                    = "ami-01637463b2cbe7cb6"
  instance_type          = "t3.micro"
  subnet_id              = aws_subnet.subnet.id
  key_name               = aws_key_pair.dj.key_name
  vpc_security_group_ids = [aws_security_group.sg.id]

  tags = {
    Name = "web-server"
  }


  # SSH connection
  connection {
    type        = "ssh"
    user        = "ubuntu"                      # For Ubuntu AMIs
    private_key = file("~/.ssh/id_rsa")
    host        = self.public_ip
  }

  # Upload app.html or copy the file from local to remote
  provisioner "file" {
    source      = "app.html"
    destination = "/home/ubuntu/app.html"
  }

  # Install and start Nginx, move the file to /var/www/html execute the file in the remote 
  provisioner "remote-exec" {
    inline = [
      "sudo apt-get update -y",
      "sudo apt-get install -y nginx",
      "sudo mv /home/ubuntu/app.html /var/www/html/index.html",
      "sudo systemctl enable nginx",
      "sudo systemctl restart nginx"
    ]
  }
}
